--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -80,6 +80,22 @@ colours:
 
 
 changeLog:
+  - type: *changedMetric
+    date: "2021-03-11"
+    displayBanner: true
+    headline: Removal of weekly vaccination data
+    relativeUrl: details/vaccinations
+    body: >
+      Weekly data on people who have received vaccinations are no longer included on the dashboard. 
+      Daily vaccinations data are still shown and are more timely.
+    details: |
+      You can find more vaccinations information in the relevant publications for each nation: 
+
+      - [England](https://www.england.nhs.uk/statistics/statistical-work-areas/covid-19-vaccinations/)
+      - [Northern Ireland](https://covid-19.hscni.net/ni-covid-19-vaccinations-dashboard/)
+      - [Scotland](https://public.tableau.com/profile/phs.covid.19#!/vizhome/COVID-19DailyDashboard_15960160643010/Overview)
+      - [Wales](https://public.tableau.com/profile/public.health.wales.health.protection#!/vizhome/RapidCOVID-19virology-Public/Headlinesummary).
+
   - type: *newMetric
     date: "2021-03-10"
     displayBanner: true
