--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -413,7 +413,7 @@ cards:
 # Uk only (card with nation version below)
 # {{ StartDevOnlyBlock }}
 
-  - heading: [Deprecated] People who have received vaccinations, by vaccination date (weekly)
+  - heading: "[Deprecated] People who have received vaccinations, by vaccination date (weekly)"
     cardType: multiAreaStatic
     locationAware:
       included: 
@@ -665,7 +665,7 @@ cards:
 # {{ StartDevOnlyBlock }}
 # nations only (UK version in card above)
 
-  - heading: [Deprecated] People who have received vaccinations, by vaccination date (weekly)
+  - heading: "[Deprecated] People who have received vaccinations, by vaccination date (weekly)"
     cardType: multiAreaStatic
     locationAware:
       included: 
@@ -761,4 +761,5 @@ cards:
       - heading: About 
         tabType: metadata
         filename: cardMetadata/healthcare/cardVaccinationsWeekly.md
+
 # {{ EndDevOnlyBlock }}
