--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -96,6 +96,11 @@ changeLog:
       - [Scotland](https://public.tableau.com/profile/phs.covid.19#!/vizhome/COVID-19DailyDashboard_15960160643010/Overview)
       - [Wales](https://public.tableau.com/profile/public.health.wales.health.protection#!/vizhome/RapidCOVID-19virology-Public/Headlinesummary).
 
+      API metrics affected by this change are as follows:
+
+      - `weeklyPeopleVaccinatedFirstDoseByVaccinationDate`
+      - `weeklyPeopleVaccinatedSecondDoseByVaccinationDate`
+
   - type: *newMetric
     date: "2021-03-10"
     displayBanner: true
