added dev only total columns to cases by test type card

--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1876,6 +1876,15 @@ cards:
               value: newCasesLFDOnlyBySpecimenDate
               type: numeric
               tooltip: Daily number of new people tested positive using an LFD test with no subsequent confirmatory PCR by specimen date
+
+# {{ StartDevOnlyBlock }}
+
+            - label: All cases daily
+              value: newCasesBySpecimenDate
+              type: numeric
+              tooltip: Daily number of new people tested positive by specimen date  
+
+# {{ EndDevOnlyBlock }}                          
       
             - label: PCR total
               value: cumCasesPCROnlyBySpecimenDate
@@ -1891,6 +1900,15 @@ cards:
               type: numeric
               value: cumCasesLFDOnlyBySpecimenDate
               tooltip: Total number of new people tested positive using an LFD test with no subsequent confirmatory PCR by specimen date
+
+ # {{ StartDevOnlyBlock }}
+
+            - label: All cases total
+              value: cumCasesBySpecimenDate
+              type: numeric
+              tooltip: Total number of new people tested positive by specimen date  
+
+# {{ EndDevOnlyBlock }}             
 
         - heading: About 
           tabType: metadata
