removed experimental tag from heatmaps

--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -313,7 +313,7 @@ cards:
 
   - heading: Cases by specimen date age demographics
     cardType: chart
-    experimental: true
+    experimental: false
     locationAware:
       excluded:
         areaType:
