--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1910,4 +1910,166 @@ cards:
 
 ##############################################################################################################################
 
+# {{ StartDevOnlyBlock }}
+# Only shown for UK
 
+  - heading: Cases by date reported (Dev only)
+    cardType: multiAreaStatic
+    locationAware:
+      included: 
+        areaType:
+          - overview
+
+    fullWidth: true
+    abstract: >
+      Number of individuals who have had at least one positive COVID-19 test result either lab-reported or lateral flow device (England only),
+      by date reported. On 2 July, case data from pillars 1 and 2 of the testing programme were
+      combined and de-duplicated, resulting in a step decrease in the cumulative number of cases
+      reported.
+
+    download:
+      - newCasesByPublishDate
+      - cumCasesByPublishDate
+      
+    options:
+      type: radio
+      heading: null
+      choices:
+        - UK total
+        - By nation
+    
+    UK total:
+      
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: stack
+          colours: [0] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
+
+          fields:
+            - label: "Number of cases"
+              value: newCasesByPublishDate
+              tooltip: Daily number of new people tested positive, by date reported
+              type: bar
+              rollingAverage: false
+              
+            - label: Cases (7-day average)
+              value: newCasesByPublishDate
+              tooltip: 7-day rolling average of the daily number of new people tested positive reported
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage: true
+                
+        - heading: Cumulative
+          tabType: chart
+          barType: stack
+          colours: [0] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
+
+          fields:
+            - label: "Number of cases"
+              value: cumCasesByPublishDate
+              tooltip: Cumulative total number of people tested positive, by date reported
+              type: bar
+              rollingAverage: false
+             
+        - heading: Data
+          tabType: table
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
+        
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported on coronavirus.data.gov.uk
+
+            - label: daily
+              value: newCasesByPublishDate
+              type: numeric
+              tooltip: Daily number of new people tested positive, by date reported
+
+            - label: total
+              value: cumCasesByPublishDate
+              type: numeric
+              tooltip: Cumulative total number of people tested positive, by date reported
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/cases/cardCasesTimeSeries.md
+
+    By nation:
+      
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: stack
+          colours: [0, 9, 3, 10] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+
+          fields:
+            - label: ""
+              value: newCasesByPublishDate
+              tooltip: Daily number of new people tested positive, resident in each nation, by date reported
+              type: bar
+              rollingAverage: false
+
+        - heading: Cumulative
+          tabType: chart
+          barType: stack
+          colours: [0, 9, 3, 10] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+
+          fields:
+            - label: ""
+              value: cumCasesByPublishDate
+              tooltip: Cumulative total number of people tested positive, resident in each nation, by date reported
+              type: bar
+              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+        
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported on coronavirus.data.gov.uk
+
+            - label: daily
+              value: newCasesByPublishDate
+              type: numeric
+              tooltip: Daily number of new people tested positive, resident in each nation, by date reported
+
+            - label: total
+              value: cumCasesByPublishDate
+              type: numeric
+              tooltip: Cumulative total number of people tested positive, resident in each nation, by date reported
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/cases/cardCasesTimeSeries.md
+
+# {{ EndDevOnlyBlock }}
+
+##############################################################################################################################
