fixed issue with vaccination page

--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -11,6 +11,7 @@ headlineNumbers:
 
 ############################################################################################################################## 
 
+cards:
 # UK only (nation version in separate card below)
 
   - heading: People who have received 1st dose vaccinations, by report date
